ISSUE #680 - WIP to better tablet support, memory handling

--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -79,6 +79,8 @@ account-dir #account .userContentNoMargin {
 
 account-dir #account {  
   background-size: contain;
+  position: absolute;
+  width: 100%;
 }
 
 account-dir #accountHolder {
@@ -108,7 +110,7 @@ account-dir .dataContainer {
 }
 
 account-dir #account #accountItem {
-   margin-right: 5%;
+  margin-right: 5%;
 }
 
 account-dir #account #accountItem userContent {
@@ -116,11 +118,18 @@ account-dir #account #accountItem userContent {
   overflow: auto;
 }
 
+@media (min-width:600px) and (max-width:960px) {
+  account-dir #account #accountItem {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+}
+
 @media (max-width: 767px) {
   account-dir #account #accountItem {
     margin-left: 5%;
-    margin-bottom: 100px;
-    /* margin-top: 200px; */
   }
 }
 
@@ -303,16 +312,8 @@ account-info {
 
 @media (max-width: 767px) {
   
-  account-info #account #accountItem {
-    min-height: 700px;
-  }
-
   account-info #accountInfoContent {
      max-height: 100% !important;
-  }
-
-  account-info {
-    margin-bottom: 100px;
   }
   
 }
@@ -346,16 +347,6 @@ account-info p {
 account-info md-list {
   padding: 0;
 }
-
-/*
-account-info .accountInfoPage {
-  min-height: 50px;
-}
-account-info .accountInfoPage .md-button {
-  min-height: 50px!important;
-  height: 50px;
-}
-*/
 
 /** Avatar Image ******************************************************************************************************/
 .account-avatar-image {
