--- a/frontend/components/account/pug/account-menu.pug
+++ b/frontend/components/account/pug/account-menu.pug
@@ -19,6 +19,11 @@ md-menu#accountMenu(md-position-mode="target-right target")
 				md-switch(ng-model="vm.isLiteMode" aria-label="Lite Mode")
 					p Lite Mode
 
+		md-menu-item(ng-if="vm.hasMemorySettings()")
+			md-button(ng-click="vm.resetMemorySettings()")
+				md-icon.angular-material-icons restore
+				| Reset Settings
+
 		md-menu-item
 			md-button(ng-click="vm.logout()")
 				md-icon.angular-material-icons exit_to_app
