--- a/frontend/components/model/pug/model.pug
+++ b/frontend/components/model/pug/model.pug
@@ -4,7 +4,7 @@
 	#project-viewport-container.row(tabindex="0", tdr-focus="true")
 	
 	measure(
-		ng-if="!vm.isMobileDevice"
+		ng-if="!vm.isLiteMode"
 		keys-down="vm.keysDown"
 		id='measure-tool'
 	 	account='vm.account' 
@@ -19,7 +19,6 @@
 			revision="vm.revision")
 
 		panel#leftPanel(
-			ng-if="vm.isMobileDevice"
 			account="vm.account"
 			model="vm.model"
 			branch="vm.branch"
@@ -32,7 +31,7 @@
 			set-initial-selected-objects="vm.setInitialSelectedObjects({selectedObjects: selectedObjects})")
 
 		panel#rightPanel(
-			ng-if="!vm.isMobileDevice"
+			ng-if="!vm.isLiteMode"
 			account="vm.account"
 			model="vm.model"
 			branch="vm.branch"
@@ -41,11 +40,11 @@
 			style="pointer-events:{{vm.pointerEvents}}")
 
 		right-panel(
-			ng-if="!vm.isMobileDevice"
+			ng-if="!vm.isLiteMode"
 			style="pointer-events:{{vm.pointerEvents}}")
 
 		bottom-buttons(
-			ng-if="!vm.isMobileDevice"
+			ng-if="!vm.isLiteMode"
 			style="pointer-events:{{vm.pointerEvents}}")
 
 error-dialog(
