--- a/frontend/components/account/pug/account-teamspaces.pug
+++ b/frontend/components/account/pug/account-teamspaces.pug
@@ -13,7 +13,7 @@
 
 			account-items(
 				ng-if="!vm.loading"
-				is-mobile-device="vm.isMobileDevice"
+				is-lite-mode="vm.isLiteMode"
 				account="vm.account"
 				accounts="vm.accounts"
 				on-show-page="vm.showPage(page, callingPage)"
