--- a/frontend/components/issues/css/issues.css
+++ b/frontend/components/issues/css/issues.css
@@ -291,6 +291,7 @@ issue #issueFooterButtons {
 }
 
 issue .issueItemContainer {
+  z-index: 10;
   padding: 10px;
   margin-top: 8px; 
   padding-top: 10px;
