--- a/frontend/components/account/pug/account.pug
+++ b/frontend/components/account/pug/account.pug
@@ -1,7 +1,6 @@
 account-menu(
 	account="vm.account"
-	is-lite-mode="vm.isLiteMode"
-	show-lite-mode-button="vm.showLiteModeButton")
+	is-lite-mode="vm.isLiteMode")
 
 div#accountHolder(
 	layout="row"
