--- a/frontend/components/right-panel/css/right-panel.css
+++ b/frontend/components/right-panel/css/right-panel.css
@@ -9,6 +9,25 @@ right-panel #rightPanelButtons .rightPanelButtonGroup {
     margin-top: 15px;
 }
 
+@media (max-width: 767px) {
+    #leftPanel {
+        height: 100%;
+    }
+    #leftPanel #buttons {
+        bottom: 35px;
+        top: initial;
+        left: 0;
+        width: 100%;
+    }
+
+    panel #buttons .panelButtonGroup {
+        margin-bottom: 20px;
+        width: 50px;
+        display: inline-flex;
+    }
+   
+}
+
 right-panel #rightPanelButtons .md-button {
     margin-bottom: 2px;
     margin-top: 14px;
