ISSUE #703 - Move maintenance to the frontend service

--- a/frontend/components/login/css/login.css
+++ b/frontend/components/login/css/login.css
@@ -21,6 +21,10 @@ login .username {
   margin-bottom: 0px;
 }
 
+login .userNotice {
+  margin-top: 10px;
+}
+
 login md-progress-circular {
   width: 25px !important;
   height: 25px !important;
